RESOLVED FIXED48446
Wrong parameter when getting MIME type from extension
https://bugs.webkit.org/show_bug.cgi?id=48446
Summary Wrong parameter when getting MIME type from extension
Crystal Zhang
Reported 2010-10-27 11:28:58 PDT
Created attachment 72060 [details] patch Should pass extension to MIMETypeRegistry::getMIMETypeForExtension().
Attachments
patch (1.31 KB, patch)
2010-10-27 11:28 PDT, Crystal Zhang
no flags
patch (1.95 KB, patch)
2010-10-27 12:14 PDT, Crystal Zhang
no flags
Crystal Zhang
Comment 1 2010-10-27 12:14:13 PDT
Created attachment 72069 [details] patch Update commit log.
Eric Carlson
Comment 2 2010-10-27 12:30:28 PDT
Comment on attachment 72069 [details] patch Nice catch! r=me
WebKit Commit Bot
Comment 3 2010-10-27 12:53:17 PDT
Comment on attachment 72069 [details] patch Clearing flags on attachment: 72069 Committed r70695: <http://trac.webkit.org/changeset/70695>
WebKit Commit Bot
Comment 4 2010-10-27 12:53:23 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2010-10-27 14:09:41 PDT
Why was it OK to land this without a regression test?
Ademar Reis
Comment 6 2011-01-26 13:17:18 PST
Revision r70695 cherry-picked into qtwebkit-2.1.x with commit 5454ae3 <http://gitorious.org/webkit/qtwebkit/commit/5454ae3>
Note You need to log in before you can comment on or make changes to this bug.