2010-10-27  Crystal Zhang  <haizhang@rim.com>

Reviewed by Eric Carlson.

        https://bugs.webkit.org/show_bug.cgi?id=48446

        Fix an issue where we were passing the wrong parameter
        to MIMETypeRegistry::getMIMETypeForExtension().

        * platform/MIMETypeRegistry.cpp:

Canonical link: https://commits.webkit.org/61214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70695 268f45cc-cd09-0410-ab3c-d52691b4dbfc